--- a/CRUD/src/main/resources/application.yml
+++ b/CRUD/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     show-sql: true
 
   datasource:
-    url: jdbc:mysql://localhost:3306/spring_crud?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/crud?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: h25189230!
     driver-class-name: com.mysql.cj.jdbc.Driver
