--- a/SignUp/src/main/resources/application.yml
+++ b/SignUp/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     generate-ddl: true
     show-sql: true
 
+  thymeleaf:
+    cache: false
+
   datasource:
     url: jdbc:mysql://localhost:3306/signup?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
